// Vitest Snapshot v1

exports[`FormLayout > should render correctly 1`] = `
<DocumentFragment>
  <div
    class="lg:w-1/3 md:w-1/2 w-full"
  >
    <div
      class=""
    >
      <div
        class=""
      >
        <h1
          aria-label="Example Form"
          aria-level="1"
          class="text-2xl font-extrabold leading-6 text-gray-800"
        >
          Example Form
        </h1>
        <h2
          class="text-sm mt-4 font-medium leading-none text-gray-500"
        >
          This is an example form
        </h2>
        <div
          class="mt-4 w-full grid gap-y-4 "
        >
          <div>
            <div
              class="relative flex align-middle"
            >
              <label
                class="text-sm font-medium leading-none text-gray-800 capitalize relative flex-1"
                for="id"
              >
                Label
                <input
                  aria-label="Label"
                  class="bg-gray-200 border rounded focus:outline-none text-xs font-medium leading-none text-gray-800 py-3 w-full pl-3 mt-2"
                  id="id"
                  name="name"
                  placeholder="Placeholder"
                  type="text"
                />
              </label>
            </div>
            <ul
              class="mt-1"
            />
          </div>
          <div>
            <div
              class="relative flex align-middle"
            >
              <label
                class="text-sm font-medium leading-none text-gray-800 capitalize relative flex-1"
                for="id2"
              >
                Label
                <input
                  aria-label="Label"
                  class="bg-gray-200 border rounded focus:outline-none text-xs font-medium leading-none text-gray-800 py-3 w-full pl-3 mt-2"
                  id="id2"
                  name="name"
                  placeholder="Placeholder"
                  type="text"
                />
              </label>
            </div>
            <ul
              class="mt-1"
            />
          </div>
        </div>
        <ul />
        <button
          aria-label="Submit"
          class="text-sm font-semibold leading-none text-white focus:outline-none py-4 w-full mt-4 bg-indigo-700 border rounded hover:bg-indigo-600  focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700"
          type="submit"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormLayout > should render correctly with errors 1`] = `
<DocumentFragment>
  <div
    class="lg:w-1/3 md:w-1/2 w-full"
  >
    <div
      class=""
    >
      <div
        class=""
      >
        <h1
          aria-label="Form With Errors"
          aria-level="1"
          class="text-2xl font-extrabold leading-6 text-gray-800"
        >
          Form With Errors
        </h1>
        <h2
          class="text-sm mt-4 font-medium leading-none text-gray-500"
        >
          This form will include some errors
        </h2>
        <div
          class="mt-4 w-full grid gap-y-4 "
        >
          <div>
            <div
              class="relative flex align-middle"
            >
              <label
                class="text-sm font-medium leading-none text-gray-800 capitalize relative flex-1"
                for="id"
              >
                Label
                <input
                  aria-label="Label"
                  class="bg-gray-200 border rounded focus:outline-none text-xs font-medium leading-none text-gray-800 py-3 w-full pl-3 mt-2"
                  id="id"
                  name="name"
                  placeholder="Placeholder"
                  type="text"
                />
              </label>
            </div>
            <ul
              class="mt-1"
            >
              <li>
                <small
                  class="text-red-500"
                >
                  Input Error 1
                </small>
              </li>
              <li>
                <small
                  class="text-red-500"
                >
                  Input Error 2
                </small>
              </li>
            </ul>
          </div>
          <div>
            <div
              class="relative flex align-middle"
            >
              <label
                class="text-sm font-medium leading-none text-gray-800 capitalize relative flex-1"
                for="id2"
              >
                Label
                <input
                  aria-label="Label"
                  class="bg-gray-200 border rounded focus:outline-none text-xs font-medium leading-none text-gray-800 py-3 w-full pl-3 mt-2"
                  id="id2"
                  name="name"
                  placeholder="Placeholder"
                  type="text"
                />
              </label>
            </div>
            <ul
              class="mt-1"
            >
              <li>
                <small
                  class="text-red-500"
                >
                  Input Error 1
                </small>
              </li>
              <li>
                <small
                  class="text-red-500"
                >
                  Input Error 2
                </small>
              </li>
            </ul>
          </div>
        </div>
        <ul>
          <li
            class="mt-1"
          >
            <small
              class="text-red-500"
            >
              Form Error 1
            </small>
          </li>
          <li
            class="mt-1"
          >
            <small
              class="text-red-500"
            >
              Form Error 2
            </small>
          </li>
        </ul>
        <button
          aria-label="Submit"
          class="text-sm font-semibold leading-none text-white focus:outline-none py-4 w-full mt-4 bg-indigo-700 border rounded hover:bg-indigo-600  focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700"
          type="submit"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
